--- a/ife-baidu/task1/index.html
+++ b/ife-baidu/task1/index.html
@@ -40,7 +40,7 @@ with a metropolitan area of over 13 million inhabitants.</p>
 with a metropolitan area of over 13 million inhabitants.</p>
 		<p>London is the capital city of England. It is the most populous city in the United Kingdom,
 with a metropolitan area of over 13 million inhabitants..<a href="http://ife.baidu.com">这里有一个链接到http://ife.baidu.com</a>London is the capital city of England. It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants..<strong>strong</strong>London is the capital city of England. It is the most populous city in the United Kingdom,
+with  of over 13 million inhabitants..<strong>strong</strong>London is the capital city of England. It is the most populous city in the United Kingdom,
 with a metropolitan area of over 13 million inhabitants..</p>
 		<img src="Finnish.jpeg">
 		<ul>
