--- a/task5/index.html
+++ b/task5/index.html
@@ -20,12 +20,12 @@
 				
 				<form>
 					<div>
-						<label>please input the email address:</label>
+						<label>input email address:</label>
 						<input type="text" name="" placeholder="this is a input place">
 						<p>warning!!!</p>
 					</div>
 					<div>
-						<label>please input password:</label> 
+						<label>password:</label> 
 						<input type="password" name="" placeholder="this is a input place">
 					</div>
 					<div>	
