--- a/js/task3/index.html
+++ b/js/task3/index.html
@@ -129,7 +129,9 @@ function init() {
 
   // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
   var button=document.getElementById("sort-btn");
-  button.onclick=btnHandle();
+  button.onclick=function(){
+    btnHandle();
+  }
 }
 
 init();
